Past CCDC/box-files/centos/iptables
*filter
:FORWARD DROP [0:0]
:INPUT DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A FORWARD -o eth0 -j LOG --log-level 7 --log-prefix BANDWIDTH_OUT:
-A FORWARD -i eth0 -j LOG --log-level 7 --log-prefix BANDWIDTH_IN:
-A OUTPUT -o eth0 -j LOG --log-level 7 --log-prefix BANDWIDTH_OUT:
-A INPUT -i eth0 -j LOG --log-level 7 --log-prefix BANDWIDTH_IN:
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack -j DROP  --ctstate INVALID
-A INPUT -p icmp -m state --icmp-type 8 --state NEW -j ACCEPT
-A INPUT -p udp -m udp -m state --state NEW -j UDP
-A INPUT -p tcp -m tcp -m state --state NEW -j TCP  --syn
-A INPUT -p udp -m udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A TCP -p tcp -m tcp --dport 80 -j ACCEPT
-A TCP -p tcp -m tcp --dport 443 -j ACCEPT
COMMIT
# Completed on Thu Feb  2 23:10:33 2017
# Generated by iptables-save v1.3.5 on Thu Feb  2 23:10:33 2017
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Feb  2 23:10:33 2017
# Generated by iptables-save v1.3.5 on Thu Feb  2 23:10:33 2017
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
